Included lecture from 17.09.

--- a/structure.tex
+++ b/structure.tex
@@ -47,6 +47,8 @@
 \usepackage{wrapfig}
 \usepackage{soul}
 \usepackage{cancel}
+\usepackage{mathtools}
+
 
 %----------------------------------------------------------------------------------------
 %	FONTS
