--- a/structure.tex
+++ b/structure.tex
@@ -521,3 +521,4 @@ addtohook={%
 \newcommand{\ec}{e_{\circ}}
 \newcommand{\hlc}[2][yellow]{ {\sethlcolor{#1} \hl{#2}} }
 \newcommand{\ord}{\op{ord}}
+\newcommand{\g}{\langle g \rangle}
