--- a/structure.tex
+++ b/structure.tex
@@ -27,6 +27,7 @@
 \usepackage{lipsum} % Inserts dummy text
 
 \usepackage{tikz} % Required for drawing custom shapes
+\usetikzlibrary{calc,intersections} 
 
 \usepackage[english]{babel} % English language/hyphenation
 
@@ -528,3 +529,44 @@ addtohook={%
   \strut\vrule % the `\vrule` is as high and deep as a strut
   \hspace{-\arraycolsep}%
 }
+
+\newcommand\markangle[6][red]{% [color] {X} {origin} {Y} {mark} {radius}
+  % filled circle: red by default
+  \begin{scope}
+    \path[clip] (#2) -- (#3) -- (#4);
+    \fill[color=#1,fill opacity=0.5,draw=#1,name path=circle]
+    (#3) circle (#6mm);
+  \end{scope}
+  % middle calculation
+  \path[name path=line one] (#3) -- (#2);
+  \path[name path=line two] (#3) -- (#4);
+  \path[%
+  name intersections={of=line one and circle, by={inter one}},
+  name intersections={of=line two and circle, by={inter two}}
+  ] (inter one) -- (inter two) coordinate[pos=.5] (middle);
+  % bissectrice definition
+  \path[%
+  name path=bissectrice
+  ] (#3) -- (barycentric cs:#3=-1,middle=1.2);
+  % put mark
+  \path[
+  name intersections={of=bissectrice and circle, by={middleArc}}
+  ] (#3) -- (middleArc) node[pos=1.3] {#5};
+  }
+  
+ \makeatletter
+\newcommand{\colub}{}
+\def\colub#1{%
+  \@ifnextchar_%
+    {\@colub{#1}}
+    {\@latex@warning{Missing argument for \string\colub}\@colub{#1}_{}}%
+}
+\def\@colub#1_#2{%
+    \colorlet{currentcolor}{.}%
+    \color{ocre}%
+    \underbracket{\color{currentcolor}#1}_{\color{ocre}#2}%
+    \color{currentcolor}%
+}
+\makeatother
+
+\renewcommand{\emph}[1]{\textcolor{ocre}{\textit{#1}}}
